syntax = "proto3";

package calculator;

option go_package = "github.com/tzuhsitseng/labs-grpc-go/calculator/proto";

message SqrtRequest {
  int32 number = 1;
}

message SqrtResponse {
  double result = 1;
}